add : calcular Valor

--- a/index.html
+++ b/index.html
@@ -13,13 +13,11 @@
 <body>
 <section class="container">
   <div class="conversor">
-    <h1 id="prueba"></h1>
     <input type="text" id="txtIngreso" placeholder="Ingrese monto">
     <select name="valores" id="valores">
-      
-
-
     </select>
+    <button id="btn">Calcular</button>
+    <div id="resultado"></div>
   </div>
 </section>
   <script src="/assets/js/script.js"></script>
