add : documentation for functions

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <button id="btn">Calcular</button>
     <div id="resultado"></div>
   </div>
+  <canvas id="myChart"></canvas> 
 </section>
   <script src="/assets/js/script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
