--- a/index.html
+++ b/index.html
@@ -1,32 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <!-- CSS only -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
-  integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous" />
-  <link rel="stylesheet" href="/assets/css/style.css" />
-    <title>Desafio API</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/assets/css/style.css">
+  <title>Desafio Api 3.0</title>
 </head>
 <body>
-<section class="container">
-  <div class="conversor">
-    <input type="text" id="txtIngreso" placeholder="Ingrese monto">
-    <select name="valores" id="valores">
-    </select>
-    <button id="btn">Calcular</button>
-    <div id="resultado"></div>
+  <div class="chartCard">
+    <div class="">
+      <input id="txtMonedaLocal" type="text">
+      <select name="" id="monedas">
+
+      </select>
+      <button id="calcular">Calcular</button>
+      <h2 id="txtResult"></h2>
+    </div>
+    <div class="chartBox">
+      <canvas id="myChart"></canvas>
+    </div>
   </div>
-  <canvas id="myChart"></canvas> 
-</section>
   <script src="/assets/js/script.js"></script>
-  
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <!-- JavaScript Bundle with Popper -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-    crossorigin="anonymous"></script>
 </body>
 </html>
