fix : change input type

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <div class="inputs">
       <div class="left">
-        <input id="txtMonedaLocal" type="text" class="form-control" id="exampleFormControlInput1"
+        <input id="txtMonedaLocal" type="number" class="form-control" id="exampleFormControlInput1"
         placeholder="ingresa la antidad a convertir">
         <div class="form-floating ">
 
